--- a/Func_mate_num_aleatorios/indexMat.html
+++ b/Func_mate_num_aleatorios/indexMat.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <title>Villa Platzi</title>
+    </head>
+    <body>
+        <canvas width="500" height="500" id="villaplatzi">
+        </canvas>
+        <script src="funcMat_Aleatorios.js">
+        </script>
+    </body>
+</html>
+
+
+
+<!--<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
         <title>Villa Platzi </title>
     </head>
     <body>
-
+        <h1> Granja: </h1>
+        <canvas width="500" height="500" id="villaplatzi"></canvas>
         <script src="funcMat_Aleatorios.js"></script>
     </body>
-</html>
+</html> -->
