--- a/cursos_platzi/Vanilla_JS_Platzi/Func_mate_num_aleatorios/indexFarmPlatzi.html
+++ b/cursos_platzi/Vanilla_JS_Platzi/Func_mate_num_aleatorios/indexFarmPlatzi.html
@@ -7,7 +7,7 @@
     <body>
         <canvas width="500" height="500" id="villaplatzi">
         </canvas>
-        <script src="funcMat_Aleatorios.js">
+        <script src="func_numero_aleatorio.js">
         </script>
     </body>
 </html>
